syntax = "proto3";

option optimize_for = CODE_SIZE;

service NetworkRpc {
  rpc sendData (DataMessage) returns (NotificationResponse);
}

message DataMessage {
  string content = 1;
}

message Layer2Message {
  Layer2Type type = 1;
}

enum Layer2Type {
  Data = 0;
}

message NotificationResponse {
  bool sent = 1;
}